[package]
name = "github_permalink_to_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = [ "derive" ] }
html5ever = "0.26.0"
reqwest = { version = "0.11.11", features = [ "blocking" ] }
anyhow = "1.0.65"
scraper = "0.13.0"
url = "2.3.1"
