[package]
name = "grab_github_permalink"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/alicewriteswrongs/grab_github_permalink"
description = "a small CLI utility for grabbing a range of a file on Github"
license = "MIT"

[dependencies]
clap = { version = "3.2.21", features = [ "derive" ] }
reqwest = { version = "0.11.11", features = [ "blocking" ] }
anyhow = "1.0.65"
url = "2.3.1"
regex = "1.6.0"
